# segmentation-rs

./: .gitignore  Cargo.toml  README.md
experiments/: export_yolo.ipynb  modify_metadata.ipynb  yolov8.ipynb
src/: main.rs  rt_detr.rs  utils2.rs  yolo.rs
