[package]
name = "segmentation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contour = "0.12.0"
image = "0.24.9"
imageproc = "0.23.0"
ndarray = "0.15.6"
ort = "^2.0.0-alpha.4"
powerboxesrs = "0.2.2"
serde = "1.0.197"
serde_json = "1.0.114"
tiny-skia = "0.11.4"
